# camrig

./: .gitignore  NOTICE  README.md  pyproject.toml
camrig/: __init__.py  basler.py  boot.py  cli.py  cloudlink.py  config.py  focus.py  motion.py  postprocess.py  power.py  record.py  shutdown.py  storage.py  supervisor.py  timesync.py  upload.py
config/: config.toml  rclone.conf.example
docs/: basler-gige.md  detector-versioning.md  worker-brief.md
setup/: install.sh  set_eeprom.sh
systemd/: cam-boot.service  cam-shutdown.service  cam-shutdown.timer  cam-supervisor.service
tests/: test_motion.py  test_postprocess.py  test_record.py  test_storage.py
