[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camrig"
version = "0.1.0"
description = "Insect-tracking capture rig for Raspberry Pi 5 + Global Shutter mono camera"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
]

[project.scripts]
camrig = "camrig.cli:main"

[tool.setuptools]
packages = ["camrig"]
