[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camrig"
version = "0.1.0"
description = "Insect-tracking capture rig for Raspberry Pi 5 + Global Shutter camera"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Basler ace 2 GigE backend (capture.camera = "basler"). pypylon bundles the
# pylon runtime and ships aarch64 wheels, so no separate SDK install is needed.
basler = ["pypylon>=3.0"]

[project.scripts]
camrig = "camrig.cli:main"

[tool.setuptools]
packages = ["camrig"]
